@@ -8,6 +8,9 @@ Bryan Henderson < bryanh at giraffe-data dot com >
 Hayashi Naoyuki <titan at culzean dot org>
         port to Tru64 [20060127]
 
+Joe Krahn <krahn at niehs dot nih dot gov> help with int64_t cleanup
+        [20071219]
+
 Kai Makisara <Kai dot Makisara at kolumbus dot fi>
         for tape mode pages and interface usability suggestions [20050517]
 
@@ -15,4 +18,4 @@ Luben Tuikov <ltuikov at yahoo dot com>
         help with documentation and other suggestions [20061014]
 
 Doug Gilbert
-13th November 2006
+19th December 2007
